# termstr

./: pyproject.toml
src/termstr/: __init__.py  const.py  models.py  term.py  utils.py
