[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "termstr"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Lingxuan Ye", email = "love@lingxuan.io" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/termstr#readme"
Issues = "https://github.com/unknown/termstr/issues"
Source = "https://github.com/unknown/termstr"
